@@ -379,6 +379,12 @@ o Thread
   _sprintf() improvements: Thread.Mutex now prints the ID of the thread
   holding the lock, and thread IDs are shown as hexadecimal numbers.
 
+o sprintf %x
+
+  %X and %x can now be used on 8-bit wide strings to get a hexadecimal
+  representation of their contents. Just calling sprintf("%x",data) is
+  the same as calling String.string2hex(data).
+
 o Unicode 10.0.0.
 
 o Unicode.is_whitespace()
